8057919: Class.getSimpleName() should work for non-JLS compliant class names

Reviewed-by: dholmes, jrose