hotspot/src/share/vm/oops/instanceKlass.hpp
@@ -404,13 +404,17 @@ class InstanceKlass: public Klass {
   bool is_same_class_package(oop classloader2, Symbol* classname2);
   static bool is_same_class_package(oop class_loader1, Symbol* class_name1, oop class_loader2, Symbol* class_name2);
 
-  // find an enclosing class (defined where original code was, in jvm.cpp!)
+  // find an enclosing class
   Klass* compute_enclosing_class(bool* inner_is_member, TRAPS) {
     instanceKlassHandle self(THREAD, this);
     return compute_enclosing_class_impl(self, inner_is_member, THREAD);
   }
   static Klass* compute_enclosing_class_impl(instanceKlassHandle self,
-                                               bool* inner_is_member, TRAPS);
+                                             bool* inner_is_member, TRAPS);
+
+  // Find InnerClasses attribute for k and return outer_class_info_index & inner_name_index.
+  static bool find_inner_classes_attr(instanceKlassHandle k,
+                                      int* ooff, int* noff, TRAPS);
 
   // tell if two classes have the same enclosing class (at package level)
   bool is_same_package_member(Klass* class2, TRAPS) {
